# my_project

./: CalDate.cpp  LOL_CHAR.cpp  README.md  calculator.cpp  git.text  hello.c  run
ai_detector_umbrella/: ai_detector.cpp  ai_detector_umbrella.py
auto_smartfarm/: app.py  tracking_animal.py
auto_smartfarm/templates/: index.html
find_wrong_pictures/: README.md  fianl_cam.py  find_blue.py  find_color_final.py
game/: raise_rak.py
game/auto_chess/: README.md  class.hpp  func.hpp  main.cpp
game/battle_chess/: README.md
game/card/: class.hpp  main.cpp  run
game/dice_game/: CMakeLists.txt  main.cpp
game/dice_game/dice_qt/: dice_qt.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
game/poker/: include.hpp  main.cpp  poker_class.hpp  run  temp.txt
game/raise/: include.hpp  main.cpp  raise_class.hpp  run
lol_char/: DBINFO.h  DBconnect.cpp  DBconnect.h  main.cpp
photoshop/: prototype.cpp
photoshop/photoshop_qt/: mainwindow.cpp  mainwindow.h  mainwindow.ui  miniproject.pro
photoshop/prototype_qt/: mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave
tcp/: basic_clinet_server.c  basic_server.c  run
